# qtsamples

./: .gitignore  .gitmodules  CMakeLists.txt  SamplesConfig.h.in  Singleton.h  identity.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  samplemanager.cpp  samplemanager.h  samplessummarytablemodel.cpp  samplessummarytablemodel.h  soundsample.cpp  soundsample.h  soundsampletablemodel.cpp  soundsampletablemodel.h  wavfile.cpp  wavfile.h
.github/workflows/: cmake.yml
